# least-squares-cpp

./: .appveyor.yml  .clang-format  .clang_complete  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  buildfile  manifest  repositories.manifest
.github/workflows/: build2.yml  cmake.yml
cmake/: CMakeLists.txt  FindLSQCPP.cmake  FindLSQCpp.cmake  FindLsqCpp.cmake  FindOptimizationCpp.cmake  Findlsqcpp.cmake  lsqcpp-config.in.cmake
cmake/tests/: CMakeLists.txt  main.cpp
dep/: CMakeLists.txt
doc/: Doxyfile
example/: my_error_function.cpp
examples/: .gitignore  CMakeLists.txt  buildfile  custom_termination_criterion.cpp  dogleg_method.cpp  gauss_newton_armijo_backtracking.cpp  gauss_newton_dogleg_method.cpp  gauss_newton_wolfe_backtracking.cpp  gradient_descent_barzilai_borwein.cpp  levenberg_marquardt.cpp  parabolic_error.cpp  pointcloud_registration.cpp  provide_explicit_jacobian.cpp
include/: CMakeLists.txt  buildfile  lsqcpp.h
include/lsq/: armijo_backtracking.h  error_function.h  gauss_newton.h  gradient_descent.h  increasing_line_search.h  levenberg_marquardt.h  line_search_algorithm.h  linear_equation_system.h  lsqcpp.h  math.h  matrix.h  optimization_algorithm.h  solver.h  solver_dense_cholesky.h  solver_dense_svd.h  solver_sparse_cholesky.h
include/lsqcpp/: lsqcpp.h
include/optcpp/: armijo_backtracking.h  constraint.h  equation_system.h  error_function.h  gauss_newton.h  gradient_descent.h  increasing_line_search.h  levenberg_marquardt.h  line_search_algorithm.h  linear_equation_system.h  math.h  optcpp.h  optimization_algorithm.h
scripts/: generate_icp_problem.py  plot_pointclouds.py
src/optcpp/: armijo_backtracking.cpp  armijo_backtracking.h  equation_system.cpp  equation_system.h  error_function.cpp  error_function.h  gauss_newton.cpp  gauss_newton.h  gradient_descent.cpp  gradient_descent.h  increasing_line_search.cpp  increasing_line_search.h  levenberg_marquardt.cpp  levenberg_marquardt.h  line_search_algorithm.h  linear_equation_system.cpp  linear_equation_system.h  math.h  optimization_algorithm.cpp  optimization_algorithm.h
submit/: 5b78826fa5387b04  6aea1fdbbe83a4df  d806366a5624346d
test/: CMakeLists.txt  backward_differences.cpp  backward_differences.float.cpp  backward_differences.in.cpp  central_differences.cpp  central_differences.double.cpp  central_differences.in.cpp  dense_cholesky_solver.cpp  dense_cholesky_solver.float.cpp  dense_cholesky_solver.in.cpp  dense_solver.cpp  dense_svd_solver.cpp  dense_svd_solver.in.cpp  dogleg_method.cpp  dogleg_method.double.cpp  dogleg_method.float.cpp  dogleg_method.in.cpp  eigen_assert.h  error_functions.h  finite_differences.cpp  forward_differences.cpp  forward_differences.double.cpp  forward_differences.in.cpp  gauss_newton.cpp  gradient_descent.cpp  levenberg_marquardt.cpp  lsqcpp.cpp  main.cpp  optimization.cpp  test_armijo_backtracking.cpp  test_error_function.cpp  test_gauss_newton.cpp  test_gradient_descent.cpp  test_increasing_line_search.cpp  test_levenberg_marquardt.cpp  test_linear_equation_system.cpp  test_solver_dense_cholesky.cpp  test_solver_dense_svd.cpp  test_solver_sparse_cholesky.cpp
test/assert/: eigen_require.h
test/errors/: parabolic_error.h
test/include/: eigen_require.h  parabolic_error.h
test/src/: backward_differences.double.cpp  backward_differences.in.cpp  central_differences.float.cpp  central_differences.in.cpp  dense_cholesky_solver.double.cpp  dense_cholesky_solver.in.cpp  dense_cholesky_solver_test.cpp  dense_svd_solver.double.cpp  dense_svd_solver.float.cpp  dense_svd_solver.in.cpp  dense_svd_solver_test.cpp  dogleg_method.double.cpp  dogleg_method.float.cpp  dogleg_method.in.cpp  dogleg_method_test.cpp  finite_differences_backward_test.cpp  finite_differences_central_test.cpp  finite_differences_forward_test.cpp  forward_differences.float.cpp  forward_differences.in.cpp  gauss_newton.cpp  gradient_descent.cpp  levenberg_marquardt.cpp  step_refiner_armijo_backtracking_test.cpp  step_refiner_barzilai_borwein_test.cpp  step_refiner_constant_factor_test.cpp  step_refiner_dogleg_method_test.cpp  step_refiner_wolfe_backtracking_test.cpp
tests/: CMakeLists.txt  buildfile  main.cpp
tests/include/: eigen_require.hpp  parabolic_error.h  parabolic_error.hpp
tests/src/: dense_cholesky_solver.test.cpp  dense_svd_solver.test.cpp  finite_differences_backward.test.cpp  finite_differences_central.test.cpp  finite_differences_forward.test.cpp  finite_differences_parameter.test.cpp  gauss_newton.cpp  gauss_newton.test.cpp  gradient_descent.cpp  gradient_descent.test.cpp  levenberg_marquardt.cpp  levenberg_marquardt.test.cpp  step_refiner_armijo_backtracking.test.cpp  step_refiner_barzilai_borwein.test.cpp  step_refiner_constant_factor.test.cpp  step_refiner_dogleg_method.test.cpp  step_refiner_levenberg_marquardt.test.cpp  step_refiner_wolfe_backtracking.test.cpp
