# CMakeLists.txt
#
#     Author: Fabian Meyer
# Created On: 13 Jul 2019

add_executable(custom_termination_criterion "custom_termination_criterion.cpp")
add_executable(gauss_newton_armijo_backtracking "gauss_newton_armijo_backtracking.cpp")
add_executable(gauss_newton_dogleg_method "gauss_newton_dogleg_method.cpp")
add_executable(gauss_newton_wolfe_backtracking "gauss_newton_wolfe_backtracking.cpp")
add_executable(gradient_descent_barzilai_borwein "gradient_descent_barzilai_borwein.cpp")
add_executable(levenberg_marquardt "levenberg_marquardt.cpp")
add_executable(provide_explicit_jacobian "provide_explicit_jacobian.cpp")
add_executable(pointcloud_registration "pointcloud_registration.cpp")
